--- a/sandbox.config.json
+++ b/sandbox.config.json
@@ -1,5 +1,6 @@
 {
-  "infiniteLoopProtection": true,
+  "infiniteLoopProtection": false,
   "hardReloadOnChange": false,
-  "view": "browser"
+  "view": "browser",
+  "template": "react"
 }
